--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.10.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
+    "prisma": "^4.10.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
